--- a/index.html
+++ b/index.html
@@ -3,11 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Devloper Portfulio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-
+       <nav>
+        <h3 class="nav-title">Ma<span class="color-primary">r</span>y</h3>
+        <ul>
+            <li><a href="#">Portfulio</a></li>
+            <li><a href="#">Blog</a></li>
+            <li><button class="btn-primary">Here Me</button></li>
+        </ul>
+       </nav>
     </header>
 
     <main>
