--- a/index.html
+++ b/index.html
@@ -7,15 +7,28 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+    <header class="header">
        <nav>
-        <h3 class="nav-title">Ma<span class="color-primary">r</span>y</h3>
+        <h3 class="nav-title">As<span class="color-primary">i</span>f</h3>
         <ul>
             <li><a href="#">Portfulio</a></li>
             <li><a href="#">Blog</a></li>
             <li><button class="btn-primary">Here Me</button></li>
         </ul>
        </nav>
+
+       <div class="banner">
+        <div>
+            <h3 class="banner-geeting">Hi, I am</h3>
+            <h1 class="banner-title">Asif Islam</h1>
+            <p>Shot what able cold new see hold.Friendly
+                 as an betrayed formerly he. Morning because
+                  as to society behaved moments.</p>
+            <button class="btn-primary">Downlod CV</button>
+            <button class="btn-primary">Contact</button>
+        </div>
+        <img src="./images/hardy.png" alt="">
+       </div>
     </header>
 
     <main>
