--- a/index.html
+++ b/index.html
@@ -21,18 +21,32 @@
         <div>
             <h3 class="banner-geeting">Hi, I am</h3>
             <h1 class="banner-title">Asif Islam</h1>
-            <p>Shot what able cold new see hold.Friendly
-                 as an betrayed formerly he. Morning because
+            <p class="pra">Shot what able cold new see hold.Friendly
+                 as an betrayed formerly he. <br> Morning because
                   as to society behaved moments.</p>
             <button class="btn-primary">Downlod CV</button>
             <button class="btn-primary">Contact</button>
         </div>
-        <img src="./images/hardy.png" alt="">
+        <img class="profile-pic" src="./images/hardy.png" alt="">
        </div>
     </header>
 
-    <main>
 
+
+
+    <main>
+          
+        <section class="about">
+            <h3 class="section-title">About Me</h3>
+            <p class="section-dis">
+                Lorem, ipsum dolor sit amet consectetur adipisicing
+                 elit. Nesciunt odio a impedit totam quo tempora, 
+                 corrupti eos vel vitae ratione sint perspiciatis 
+                 illum quisquam 
+                sunt. Omnis et tenetur incidunt eum sit dicta cum
+                 hic!
+            </p>
+        </section>
     </main>
 
     <footer>
