--- a/index.html
+++ b/index.html
@@ -46,11 +46,145 @@
                 sunt. Omnis et tenetur incidunt eum sit dicta cum
                  hic!
             </p>
+            <div class="about-info-container">
+                <div class="about-info">
+                    <h4 class="about-title">Name:</h4>
+                    <p class="info-dis">Asif Islam</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="about-title">Name:</h4>
+                    <p class="info-dis">Asif Islam</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="about-title">Name:</h4>
+                    <p class="info-dis">Asif Islam</p>
+                </div>
+                <div class="about-info">
+                    <h4 class="about-title">Name:</h4>
+                    <p class="info-dis">Asif Islam</p>
+                </div>
+            </div>
+        </section>
+
+        <section>
+            <h3 class="section-title">What I do</h3>
+            <p id="dis" class="section-dis">Lorem ipsum dolor sit amet
+                 consectetur adipisicing elit. Labore, perspiciatis
+                  ex inventore reiciendis, soluta assumenda quaerat
+                   aspernatur tempora ab omnis facilis voluptate 
+                    expedita? Officia sint quibusdam
+                 eligendi aut ad est minima perferendis eos!
+            </p>
+            <div class="skill-container">
+                <!-- .skill*4>img+h3.skill-title+p.skill-dis -->
+                <div class="skill">
+                    <img src="images/icons/js.png" alt="">
+                    <h3 class="skill-title">Vanilla JavaScript</h3>
+                    <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/mongo.png" alt="">
+                    <h3 class="skill-title">React</h3>
+                    <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/nodejs.png" alt="">
+                    <h3 class="skill-title">Node.js</h3>
+                    <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+                <div class="skill">
+                    <img src="images/icons/react.png" alt="">
+                    <h3 class="skill-title">MongoDB</h3>
+                    <p class="skill-dis">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+                </div>
+            </div>
+        </section>
+
+        <!-- resumi -->
+
+        <section>
+            <h3 class="section-title">A summary of My Resume</h3>
+            <div class="summary-part">
+                <!-- summary-left  -->
+                <div class="summary-left">
+                    <h2 class="summary-title">My Education</h2>
+                    <h3 class="summary-thrd">Master in Computer Engineering</h3>
+                    <h4 class="summary-ford">Harvard University / 2015 - 2017</h4>
+                    <p class="summary-dis">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                        commodo ligula eget dolor.</p>
+                        <hr>
+
+                    <h3 class="summary-thrd">Master in Computer Engineering</h3>
+                    <h4 class="summary-ford">Harvard University / 2015 - 2017</h4>
+                    <p class="summary-dis">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                        commodo ligula eget dolor.</p>
+                        <hr>
+
+                    <h3 class="summary-thrd">Master in Computer Engineering</h3>
+                    <h4 class="summary-ford">Harvard University / 2015 - 2017</h4>
+                    <p class="summary-dis">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                        commodo ligula eget dolor.</p>
+                        <hr>
+                </div>
+                <!-- summary-left-end  -->
+                <!-- summary-right-start  -->
+                <div class="summary-right">
+                    <h2 class="summary-title">My Education</h2>
+                    <h3 class="summary-thrd">Master in Computer Engineering</h3>
+                    <h4 class="summary-ford">Harvard University / 2015 - 2017</h4>
+                    <p class="summary-dis">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                        commodo ligula eget dolor.</p>
+                        <hr>
+
+                    <h3 class="summary-thrd">Master in Computer Engineering</h3>
+                    <h4 class="summary-ford">Harvard University / 2015 - 2017</h4>
+                    <p class="summary-dis">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                        commodo ligula eget dolor.</p>
+                        <hr>
+
+                    <h3 class="summary-thrd">Master in Computer Engineering</h3>
+                    <h4 class="summary-ford">Harvard University / 2015 - 2017</h4>
+                    <p class="summary-dis">List skill/technologies here. You can change the icon above 
+                        to any of the 1500+ FontAwesome 5 free icons available. Aenean 
+                        commodo ligula eget dolor.</p>
+                        <hr>
+                </div>
+                
+            </div>
+            <div class="btn">
+                <button class="btn-primary">Download CV</button>
+            </div>
         </section>
     </main>
 
     <footer>
-        
+        <div class="footer-container">
+            <div class="footer-left">
+                <h2 class="footer-title">Lets Connect</h2>
+                <p class="footer-dis">Please fill out the form on this section to contact 
+                    with me or call between 9:00 A.M and
+                     8.00 P.M ET, Monday through Friday.</p>
+                     <div class="icon">
+                        <img src="images/icons/facebook.png" alt="">
+                        <img src="images/icons/insta.png" alt="">
+                        <img src="images/icons/twitter.png" alt="">
+                     </div>
+            </div>
+            <div class="footer-right">
+                <h2 class="footer-title">Let’s Message me</h2>
+                <form action="" class="contact">
+                    <input type="text" name="name" placeholder="Your Name">
+                    <input type="email" name="email" placeholder="Your Email">
+                    <textarea name="Message" id="" cols="30" rows="6" placeholder="Message"></textarea>
+                    <input type="submit" class="btn-primary" value="Submit">
+                </form>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
